--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 </head>
 <body>
   <header>
-    <h1>Franato Cards</h1>
+    <h1>Franato Cards Impressos</h1>
     <nav>
       <a href="#inicio">Início</a>
       <a href="#servicos">Serviços</a>
